--- a/trippin/src/pages/createTrip1.css
+++ b/trippin/src/pages/createTrip1.css
@@ -43,7 +43,7 @@
 
 /* Input fields with rounded corners */
 .form-control {
-  width: 100%;
+  width: auto;
   padding: 15px;
   border-radius: 10px;
   background-color: rgba(255, 255, 255, 0.5);
