--- a/trippin/src/pages/Dashboard.css
+++ b/trippin/src/pages/Dashboard.css
@@ -1,9 +1,8 @@
 /* Dashboard.css */
-@import url('https://fonts.cdnfonts.com/css/metropolis-2');
 * {
-  font-family: "Metropolis", sans-serif;
-}
-
+    font-family: "Metropolis", sans-serif;
+  }
+  
   body {
     margin: 0;
     padding: 0;
@@ -17,7 +16,7 @@
   }
   
   .title {
-    color: #000000;
+    color: #FF0000;
     font-size: 2rem;
     font-weight: 700;
     margin-bottom: 2rem;
